Update sources of service
