# src/main/java/de/gematik/demis/notificationgateway/domain/portal/PortalConfigRestController.java
@@ -1,41 +1,0 @@
-/*
- * Copyright [2023], gematik GmbH
- *
- * Licensed under the EUPL, Version 1.2 or - as soon they will be approved by the
- * European Commission – subsequent versions of the EUPL (the "Licence").
- * You may not use this work except in compliance with the Licence.
- *
- * You find a copy of the Licence in the "Licence" file or at
- * https://joinup.ec.europa.eu/collection/eupl/eupl-text-eupl-12
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the Licence is distributed on an "AS IS" basis,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either expressed or implied.
- * In case of changes by gematik find details in the "Readme" file.
- *
- * See the Licence for the specific language governing permissions and limitations under the Licence.
- */
-
-package de.gematik.demis.notificationgateway.domain.portal;
-
-import static de.gematik.demis.notificationgateway.common.constants.WebConstants.API_NG_CONFIGS;
-
-import lombok.RequiredArgsConstructor;
-import org.springframework.cloud.sleuth.annotation.NewSpan;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
-
-@RestController
-@RequiredArgsConstructor
-@RequestMapping(API_NG_CONFIGS)
-public class PortalConfigRestController {
-  private final PortalConfigProperties properties;
-
-  @GetMapping("/portal")
-  @NewSpan
-  ResponseEntity<PortalConfigProperties> configProperties() {
-    return ResponseEntity.ok(properties);
-  }
-}
